--- a/Project.toml
+++ b/Project.toml
@@ -1,2 +1,10 @@
+[deps]
+Atom = "c52e3926-4ff0-5f6e-af25-54175e0327b1"
+IJulia = "7073ff75-c697-5162-941a-fcdaad2a7d2a"
+Juno = "e5e0dc1b-0480-54bc-9374-aad01c23163d"
+PyPlot = "d330b81b-6aea-500a-939a-2ce795aea3ee"
+QuantumOptics = "6e0679c1-51ea-5a7c-ac74-d61b76210b0c"
+WignerSymbols = "9f57e263-0b3d-5e2e-b1be-24f2bb48858b"
+
 [compat]
 julia = "1.5.3"
