Added new file for H 2p.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,5 @@
 {
-    "python.pythonPath": "c:\\Users\\User\\AppData\\Local\\Programs\\Julia 1.5.3\\bin\\julia.exe"
+    "python.pythonPath": "c:\\Users\\User\\AppData\\Local\\Programs\\Julia 1.5.3\\bin\\julia.exe",
+    "jupyter.jupyterServerType": "local",
+    "julia.environmentPath": "C:\\Users\\User\\.julia\\environments\\v1.5"
 }
