Changes from 1s to 2p.
Modified file from H 1s to H 2p.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-    "python.pythonPath": "c:\\Users\\User\\AppData\\Local\\Programs\\Julia 1.5.3\\bin\\julia.exe",
+    "python.pythonPath": "C:\\Users\\User\\.julia\\conda\\3\\python.exe",
     "jupyter.jupyterServerType": "local",
     "julia.environmentPath": "C:\\Users\\User\\.julia\\environments\\v1.5"
 }
