--- a/Project.toml
+++ b/Project.toml
@@ -1,10 +1,6 @@
 [deps]
-Atom = "c52e3926-4ff0-5f6e-af25-54175e0327b1"
 IJulia = "7073ff75-c697-5162-941a-fcdaad2a7d2a"
-Juno = "e5e0dc1b-0480-54bc-9374-aad01c23163d"
-PyPlot = "d330b81b-6aea-500a-939a-2ce795aea3ee"
+PlotlyBase = "a03496cd-edff-5a9b-9e67-9cda94a718b5"
+Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 QuantumOptics = "6e0679c1-51ea-5a7c-ac74-d61b76210b0c"
 WignerSymbols = "9f57e263-0b3d-5e2e-b1be-24f2bb48858b"
-
-[compat]
-julia = "1.5.3"
